test/expected/set_explicit-int=x.out
set explicit-int=x
                 ^
18: error: "x": invalid explicit-int value; must be one of: i, u, or {[u]{isl[l]}[,]}+
